--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,6 +4,7 @@
   background: url("images/hero-bg.jpg") top right;
   background-size: cover;
   position: relative;
+  background-position: center center;
  
 }
 
