--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 #footer {
-    background: url("images/footer-bg.jpg") top center no-repeat;
+    background-color: #2a4b67;
     background-size: cover;
     color: #fff;
     font-size: 14px;
